fix alignment with icons

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,6 +14,7 @@
     background-color: #fff;
     font-size: 16px;
     font-weight: 600;
+    vertical-align: bottom;
     cursor: pointer;
     &:hover {
       color: #fff;
